migu package fix up